[package]
name = "miniutils"
version = "0.2.0"
authors = ["Mikko Tanner <mikko.tanner@gmail.com>"]
description = "Minimal utilities for Rust"
readme = "README.md"
repository = "https://github.com/Ukko-Ylijumala/miniutils-rs"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]
keywords = ["utilities"]
publish = false
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.4"
sysinfo = "0.35.2"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.timesince]
git = "https://github.com/Ukko-Ylijumala/timesince-rs"
version = "0.3.1"

[[bin]]
name = "sysinfo-printer"
path = "src/sysinfo_printer.rs"
